--- a/notebook/2. Model Trainer Diabetes Prediction.ipynb
+++ b/notebook/2. Model Trainer Diabetes Prediction.ipynb
@@ -413,7 +413,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "0cb6bc6f0afad2f3cfd4f6dc9ee55558827a4396f72206481fb9538e41c7f939"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
